Fixing icons to view on mobile
Fixing icon scaling issues, favicons

--- a/css/main.css
+++ b/css/main.css
@@ -146,11 +146,11 @@ footer {
     display: block;
     margin: 0 auto;
     margin-top: 20px;
-    width: 150px;
-    height: 150px;
+    width: 85%;
+    height: 30%;
     border: 1px solid white;
     border-radius: 75%;
-    padding: 10px;
+    padding: 5%;
     
     
 }
